redid scrollbar and fixed expansion weirdness

--- a/src/renderer/components/SideBarPanel/SideBarPanel.scss
+++ b/src/renderer/components/SideBarPanel/SideBarPanel.scss
@@ -31,23 +31,26 @@
     &:active,
     &:focus {
       overflow: auto;
+      scrollbar-width: thin;
+      scrollbar-color: var(--border-color) transparent;
     }
 
-    &::-webkit-scrollbar {
-      width: 0.5rem;
-    }
+    // &::-webkit-scrollbar {
+    //   width: 0.5rem;
+    // }
 
-    &::-webkit-scrollbar-track {
-      box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-    }
+    // &::-webkit-scrollbar-track {
+    //   // box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+    //   background: transparent;
+    // }
 
-    &::-webkit-scrollbar-thumb {
-      // figure out color
-      background-color: var(--border-color);
-      transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      transition-duration: 150ms;
-    }
+    // &::-webkit-scrollbar-thumb {
+    //   // figure out color
+    //   background-color: var(--border-color);
+    //   // transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    //   // transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    //   // transition-duration: 150ms;
+    // }
 
     .empty-panel-body {
       display: flex;
